2006-07-23 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt: ENV['REMOTE_ADDR'] -> @cgi.remote_addr, and move it to
	bottom of the mail body.

2006-07-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: fix namespace ResolvError.

2006-07-21  Kazuhiko  <kazuhiko@fdiary.net>
	* skel/mail.rtxt: output ENV['REMOTE_ADDR'].
	* tdiary/filter/default.rb: untaint referer file names for mod_ruby.

2006-07-19 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: add timeout to black_domain.

2006-07-19 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/spam.rb: recognize URI only http, https, ftp and mailto.
	* tdiary/filter/spam.rb: max_rate means percentage.

2006-07-10 TADA Tadashi <sho@spc.gr.jp>
	* plugin/ja/10spamfilter.rb: modify messages of preference page more.
	* theme/conf.css: hide div.footer, and enlarge submit button.
	* skel/conf.rhtml: add some classes.

2006-07-08 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/default.rb: TSUKKOMI filtered by 'POST' command exactly.

2006-07-05 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/wiki: fix bug and add notice about obsolete to README.
	thanks Norihiro Hattori <norihiro.hattori at gmail.com>.
	* tdiary/defaultio.rb: fix Errno::EACCES error when convert referer to new
	formats on Windows.
	* tdiary/filter/default.rb: check POST method correctly.

2006-07-05 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defaultio.rb: close file before delete empty diary file.

2006-07-04 TADA Tadashi <sho@spc.gr.jp>
	* add 'tdiary.conf.beginner' for configuration file for beginner.
	* theme/default: move sidebar to rightside, and support beginner conf.

2006-06-26 TADA Tadashi <sho@spc.gr.jp>
	* add help button to each preferences.
	* plugin/ja/10spamfilter.rb: change some words.

2006-06-26 SHIBATA Hiroshi <h-sbt@nifty.com>
	* plugin/10spamfilter.rb: fix bug about spamfilter.date_limit. thanks OGAWA KenIchi.

2006-05-28 TADA Tadashi <sho@spc.gr.jp>
	* index.rb, update.rb: return status 500 on error when "MSIE" also.
