@@ -30,7 +30,7 @@
 require 'uri'
 
 class HikiDoc < String
-  Revision = %q$Rev: 33 $
+  Revision = %q$Rev: 38 $
 
   def initialize( content = '', options = {} )
     @level = options[:level] || 1
@@ -274,7 +274,7 @@ class HikiDoc < String
       ret = %Q|\n<table border="1">\n|
       str.each do |line|
         ret << "<tr>"
-        line.chomp.split( TABLE_SPLIT_RE )[1..-1].each do |i|
+        line.chomp.sub( /#{TABLE_SPLIT_RE}$/, '').split( TABLE_SPLIT_RE, -1 )[1..-1].each do |i|
           tag = i.sub!( /^!/, '' ) ? 'th' : 'td'
           attr = ''
           if i.sub!( /^((?:\^|&gt;)+)/, '' )
@@ -347,11 +347,12 @@ class HikiDoc < String
       else
         uri = title = link
       end
+      uri.sub!( /^(?:https?|ftp|file)+:/, '' ) if %r|://| !~ uri && /^mailto:/ !~ uri
       store_block( %Q|<a href="#{escape_quote( uri )}">#{title}</a>| )
     end
     ret.gsub!( URI_RE ) do |uri|
+      uri.sub!( /^\w+:/, '' ) if %r|://| !~ uri && /^mailto:/ !~ uri
       if IMAGE_RE =~ uri
-      	uri.sub!( /^\w+:/, '' ) if %r|://| !~ uri and /^mailto:/ !~ uri
         store_block( %Q|<img src="#{uri}" alt="#{File.basename( uri )}"#{@empty_element_suffix}| )
       else
         store_block( %Q|<a href="#{uri}">#{uri}</a>| )
@@ -366,22 +367,17 @@ class HikiDoc < String
   STRONG = "'''"
   EM = "''"
   DEL = '=='
-  STRONG_RE = /#{STRONG}(.+?)#{STRONG}/
-  EM_RE = /#{EM}(.+?)#{EM}/
-  DEL_RE = /#{DEL}(.+?)#{DEL}/
-  MODIFIER_RE = /(#{STRONG_RE}|#{EM_RE}|#{DEL_RE})/   
+  MODIFIER_RE = /(#{STRONG}|#{EM}|#{DEL})(.+?)(?:\1)/
 
   def parse_modifier( text )
     text.gsub( MODIFIER_RE ) do |str|
-      case str
-      when STRONG_RE
-        store_block( "<strong>#{$1}</strong>" )
-      when EM_RE
-        store_block( "<em>#{$1}</em>" )
-      when DEL_RE
-        store_block( "<del>#{$1}</del>" )
-      else
-        str
+      case $1
+      when STRONG
+        store_block( "<strong>#{parse_modifier($2)}</strong>" )
+      when EM
+        store_block( "<em>#{parse_modifier($2)}</em>" )
+      when DEL
+        store_block( "<del>#{parse_modifier($2)}</del>" )
       end
     end
   end
